--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ saludarPersona("Carlos");</code></pre>
     </div>
 
     <div class="caja">
-        <h3>RETURN</h3>
+        <h3>RETURn</h3>
         <pre><code>function sumar(a, b) {
     return a + b;
 }
