--- a/variables/variables.html
+++ b/variables/variables.html
@@ -11,28 +11,27 @@
 <body>
      </div>
 
-        <video autoplay loop muted playsinline class="background-video">
+      <video autoplay loop muted playsinline class="background-video">
        <source src="../img/js.mp4" type="video/mp4">
        </video>
 
      </div>
     
     
-<h1> Explorador de Conceptos de JavaScript</h1>
+<h1> Creación y Comandos</h1>
 <hr>
 
-<h2>Gestión de Variables</h2>
 
 <div class="caja">
     <h3> Declaración Asignación Inicialización</h3>
-    <p><strong></strong> Es el ciclo de vida de una variable. La <strong>Declaración</strong> crea el nombre. La <strong>Asignación (=) </strong> da o cambia el valor. La <strong>Inicialización</strong> Se refiere específicamente a la creación de un nuevo objeto a partir de una plantilla predefinida (una Clase), típicamente usando la palabra clave new.</p>
+    <p> Es el ciclo de vida de una variable. La <strong>Declaración</strong> crea el nombre. La <strong>Asignación (=) </strong> da o cambia el valor. La <strong>Inicialización</strong> Se refiere específicamente a la creación de un nuevo objeto a partir de una plantilla predefinida (una Clase), típicamente usando la palabra clave new.</p>
     <button class="btn-caja" onclick="mostrarVariables()">Ver Código Dinámico</button>
     <button class="limpiarConsola">Limpiar Consola</button>
 </div>
 
 <div class="caja">
-    <h3> Comparación: let, const, var</h3>
-    <p><strong></strong> <strong>let</strong> y <strong>const</strong> tienen Alcance de Bloque (moderno). <strong>const</strong> no permite reasignación. <strong>var</strong> tiene Alcance de Función (antiguo y propenso a errores).</p>
+    <h3>let, const, var</h3>
+    <p> <span style="text-decoration:monospace;"  >let, const y var </span><strong>  palabras clave de JavaScript para declarar variables, pero difieren en su alcance y mutabilidad. </strong> var es la forma antigua con alcance de función y reasignación; let tiene alcance de bloque (se limita a llaves {}) y permite reasignar valores; const también tiene alcance de bloque, pero su valor no se puede reasignar una vez asignado.</p>
     <button class="btn-caja" onclick="mostrarLetConstVar()">Ver Código Dinámico</button>
         <button class="limpiarConsola">Limpiar Consola</button>
 
@@ -40,7 +39,7 @@
 
 <hr>
 
-<h2>Tipos Literales</h2>
+<h1>Tipos Literales</h1>
 
 <div class="caja">
     <h3>Tipo Number (Integer & Float)</h3>
